# fusion-lang

./: README.md  install.sh
fusion-compiler/: Cargo.toml  build.sh  main.fs  mir.fs
fusion-compiler/examples/dev/: foo.fs  main.fs
fusion-compiler/examples/dev/baz/: mod.fs  test.fs
fusion-compiler/examples/dev/linux/: mod.fs  syscalls.fs
fusion-compiler/src/: compilation_unit.rs  lib.rs  main.rs
fusion-compiler/src/ast/: evaluator.rs  expr.rs  lexer.rs  mod.rs  parser.rs  printer.rs  stmt.rs  visitor.rs
fusion-compiler/src/ast/lexer/: mod.rs  stream.rs  token.rs
fusion-compiler/src/cli/: mod.rs
fusion-compiler/src/codegen/: llvm.rs  mod.rs  x86.rs
fusion-compiler/src/compilation/: global_scope.rs  global_symbol_resolver.rs  local_scope.rs  mod.rs  resolver.rs  scopes.rs
fusion-compiler/src/compilation/symbols/: class.rs  function.rs  mod.rs  variable.rs
fusion-compiler/src/diagnostics/: mod.rs  printer.rs
fusion-compiler/src/formatting/: mod.rs
fusion-compiler/src/hir/: mod.rs  visitor.rs  visualization.rs
fusion-compiler/src/interpreter/: mod.rs
fusion-compiler/src/ir/: basic_block.rs  instruction.rs  label_gen.rs  mod.rs  tem_var_gen.rs  terminator.rs
fusion-compiler/src/mir/: mod.rs
fusion-compiler/src/modules/: mod.rs  scopes.rs  symbols.rs
fusion-compiler/src/optimization/: constant_folding.rs  dead_code.rs  mod.rs
fusion-compiler/src/perf/: mod.rs
fusion-compiler/src/text/: io.rs  mod.rs  span.rs
fusion-compiler/src/typings/: mod.rs
std/: lib.fs
std/io/: mod.fs  syscalls.s
std/linux/: syscalls.s
std/mem/: mem.s  (+1 more)
(+15 files in other folders)
