[package]
name = "fusion-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
lazy_static = "1.4.0"
clap = {version = "4.2.7", features =  ["derive"]}
dirs = "5.0.1"

#[dependencies.inkwell]
#version = "0.1.1"
#features = ["llvm15-0"]
